syntax = "proto3";

option csharp_namespace = "grpc4InRowService.Protos";

service User {
	rpc getOnlineUsers(Req) returns (stream UserData);
	rpc Login (LoginRequest) returns (LoginReply);
	rpc Register (RegisterRequest) returns (RegisterReply);
}

message Req{

}

message UserData{
	int32 id = 1;
	string username = 2;
}

message LoginRequest {
	string username = 1;
	string pw = 2;
}

message LoginReply{
	bool isSuccessfull=1;
}

message RegisterRequest{
	string username = 1;
	string pw = 2;
}

message RegisterReply{
	bool isSuccessfull=1;
}